--- a/api2.css
+++ b/api2.css
@@ -3,7 +3,15 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
-
+h1 {
+  text-align: justify;
+  color:yellow;
+  background-color: rgb(255, 0, 72);
+  align-content: center;
+}
+.heading {
+  text-align: center;
+}
 .images {
     height:400px;
     width:400px;
